--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 server:
-  port: 9001
+  port: 0
 
-# microservice ?? ID??
 spring:
   application:
     name: user-service
 
 # eureka client
 eureka:
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
   client:
-    register-with-eureka: true #eureka ????? ?????? ??? ????? ??? ???? ???? ??, true? ????, ?? ? ??? ???? ??
+    register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka  #micro service ??
-
+      defaultZone: http://127.0.0.1:8761/eureka
